# chrpypy

./: .gitignore  README.md  pyproject.toml  setup.py  test_examples.py
chrpypy/: __init__.py  chrgen.py  compiler.py  constraints.py  expressions.py  program.py  rules.py  typesystem.py  utils.py  viz.py
chrpypy/chrgen/: __init__.py  binding_generator.py  chr_block_generator.py  chrgen.py  chrpp_generator.py  constraint_formatter.py
chrpypy/misc/: helper.hh  helper_bindings.hh  helper_core.hh  type_casters.hh
examples/: colorpalette.py  colorpalette_factorized.py  colorpalette_simple.py  conway.py  conway_v2.py  gcd.py  leq.py  neq.py  piggy_bank.py  prime.py  python_callback.py  transmutation.py
misc/: python_callback_registry.hh  python_registry.hh  type_casters.hh
